apps/omnifin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omnifin
  namespace: apps
spec:
  parentRefs:
    - {name: home, namespace: traefik}
  hostnames:
    - omnifin.reza.network
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: custom-errors
      backendRefs:
        - {name: omnifin, port: 3000}
